# gtest_example

./: CMakeLists.txt  README.md  install_setup_gtest.sh  sample1.cpp  sample1.h
tests/: CMakeLists.txt  sample1_unittest.cpp
